--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,8 +7,5 @@
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+  <div #map id="map"></div>
 </ion-content>
